--- a/arbeit.tex
+++ b/arbeit.tex
@@ -1,6 +1,6 @@
 \documentclass{report}
 \author{Ben Haladik}
-\title{Bioinformatische Anwendung von \textit{Graphlets} zur Analyse von Proteinstrukturtopologien zur Analyse von Proteinen \\ Rohfassung}
+\title{Bioinformatische Anwendung von \textit{Graphlets} zur Analyse von Proteinstrukturtopologien \\ Rohfassung}
 \usepackage{mathtools}
 \usepackage{amsfonts}
 \usepackage{ngerman}
@@ -94,52 +94,56 @@ Die Ergebnisse dieses Vergleichs werden im Teil Ergebnisse und Diskussion vorges
 
 \chapter{Materialien und Methoden}
 
-Um die Proteinstrukturtopologien aus der PTGL zu vergleichen wurde das Programm \texttt{graphletAnalyser} genutzt und erweitert. Es wurde bereits 2013 von \textit{Tatiana Bakirova} im Rahmen ihrer Diplomarbeit im Arbeitskreis \textit{Molekulare Bioinformatik} geschrieben. Die urspr\"ungliche Funktionalität wurde erweitert. Hierbei wurden Funktionen zur Analyse von Komplexgraphen, Aminos\"auregraphen und den Sekund\"arstrukturgraphen implemetiert. Diese Graphen stammen allesamt aus der PTGL (\underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary) von Tim Sch\"afer.
+TODO: Einleitung des MatMeth-Teils \"uberarbeiten
+
+
+Um die Proteinstrukturtopologien aus der PTGL zu vergleichen wurde das Programm \texttt{graphletAnalyser} genutzt und erweitert. Es wurde bereits 2013 von \textit{Tatiana Bakirova} im Rahmen ihrer Diplomarbeit im Arbeitskreis \textit{Molekulare Bioinformatik} geschrieben. Die urspr\"ungliche Funktionalit\"at wurde erweitert. Hierbei wurden Funktionen zur Analyse von Komplexgraphen, Aminos\"auregraphen und den Sekund\"arstrukturgraphen implemetiert. Diese Graphen stammen allesamt aus der PTGL (\underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary) von Tim Sch\"afer.
 
 
 \section{PTGL}
 
 
-Die \underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary entstand aus einer Idee von Patrick May und Ina Koch \cite{ptgl1}. Ausgehend von der Tatsache, dass sich Proteinstrukturtopologien als r\"aunliche Beziehungen von SSEs untereinander definieren lassen, verwendet die PTGL \emph{Graphen}, um Proteinstrukturtopologien darzustellen.
-Hierbei stellen die Knoten des Graphen die SSEs eines Proteins dar. Sie werden dem jeweiligen SSE entsprechend markiert. Knoten, die $\alpha$-Helices repr\"asentieren werden mit einem H markiert, $\beta$-Faltbl\"atter mit einem E. Weiterhin erm\"oglicht die PTGL die Darstellung von Liganden, (\cite{vplg}) denen mit L markierte Knoten zugeordnet werden. Um die r\"aumliche Nachbarschaft von Sekund\"arstrukturen und Liganden untereinander darstellen zu k\"onnen werden ungerichtete Kanten zwischen Knoten gezogen wenn die entsprechenden Elemente benachbart sind. Jede Polypeptidkette eines Proteins wird dann als \emph{Proteingraph} dargestellt. Die Zusammenhangskomponenten eines Proteingraphen werden als Faltungsgraphen bezeichnet, weil sie typischerweise eine unabh\"angige Faltungseinheit darstellen.
+Die \underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary entstand aus einer Idee von \textit{Patrick May} und \textit{Ina Koch} (\cite{ptgl1}). Ausgehend von der Tatsache, dass sich Proteinstrukturtopologien als r\"aumliche Beziehungen von SSEs untereinander definieren lassen, verwendet die PTGL \emph{Graphen}, um Proteinstrukturtopologien darzustellen.
+Hierbei stellen die Knoten des Graphen die SSEs eines Proteins dar. Sie werden dem jeweiligen SSE entsprechend markiert. Knoten, die $\alpha$-Helices repr\"asentieren, werden mit einem H markiert, $\beta$-Faltbl\"atter mit einem E. Weiterhin erm\"oglicht die PTGL die Darstellung von Liganden, (\cite{vplg}) denen mit L markierte Knoten zugeordnet werden. Um die r\"aumliche Nachbarschaft von Sekund\"arstrukturen und Liganden mit- und untereinander darstellen zu k\"onnen, werden ungerichtete Kanten zwischen Knoten gezogen, wenn die entsprechenden Elemente benachbart sind. Jede Polypeptidkette eines Proteins wird dann als \emph{Proteingraph} dargestellt. Die Zusammenhangskomponenten eines Proteingraphen werden als Faltungsgraphen bezeichnet, weil sie typischerweise eine unabh\"angige Faltungseinheit darstellen.
 
 Durch diese abstrahierte Darstellung k\"onnen zentrale Charakteristika eines Proteins wie Motive und Dom\"anen einfach visualisiert werden.
 
 
 \section{PLCC}
 
-PLCC ist die \textit{Software}, die die Daten der PTGL generiert und verwaltet. 
+PLCC ist die \textit{Software}, die die Daten der PTGL generiert und verwaltet. Sie wird von \textit{Tim Sch\"afer} geschrieben und verwaltet.
 
 
 \paragraph{Die Berechnung der Graphen der PTGL}
 
-erfolgt unter Verwendung der entsprechenden PDB und DSSP Dateien. Um den Graphen f\"ur eine Polypeptidkette zu berechnen werden aus der DSSP-Datei die Sekund\"arstrukturelemente (SSEs) des Proteins ausgelesen. F\"ur jedes Paar von SSEs wird die Anzahl der r\"aumlichen Kontakte ihrer Residuen berechnet. Wenn die Anzahl dieser Kontakte einen gewissen Grenzwert \"uberschreitet, wird angenommen, dass diese SSEs r\"aumlich benachbart sind und die jeweiligen Knoten werden durch eine Kante verbunden. So wird f\"ur jede Polypeptidkette ein Graph erstellt.
+erfolgt unter Verwendung der entsprechenden PDB und DSSP-Dateien. Um den Graphen f\"ur eine Polypeptidkette zu berechnen, werden aus der DSSP-Datei die SSEs des Proteins ausgelesen. F\"ur jedes Paar von SSEs wird die Anzahl der r\"aumlichen Kontakte ihrer Residuen in der PDB-Datei berechnet. Wenn die Anzahl dieser Kontakte einen gewissen Grenzwert \"uberschreitet, wird angenommen, dass diese SSEs r\"aumlich benachbart sind und die jeweiligen Knoten werden durch eine Kante verbunden. So wird f\"ur jede Polypeptidkette ein Graph erstellt.
 
 \paragraph{Komplexgraphen}
 
 werden ebenfalls in dieser Arbeit untersucht. Ihre Berechnung erfolgt analog zur Berechnung der Proteingraphen. Der Unterschied besteht darin, dass ein Komplexgraph mehrere Polypeptidketten beschreibt.
 
-\paragraph{Aminos\"auregraphen} werden analog zu Proteingraphen und Komplexgraphen berechnet. Der Unterschied zu den anderen Graphformaten ist, das keine SSEs betrachtet werden. Stattdessen repr\"asentiert jeder Knoten eine Aminos\"aure eines Proteins. Die Knoten werden entsprechend der chemischen Eigenschaften der Aminos\"auren markiert. Knoten, die saure oder basische Residuen darstellen werden mit einem c markiert. Ein p markiert Knoten f\"ur polare Residuen, die weder sauer noch basisch sind. F\"ur unpolare Aminos\"auren wird ein h verwendet. Auch Liganden k\"onnen in Aminos\"auregraphen dargestellt werden. Ihre Knoten werden durch ein ? markiert. Aminos\"auregraphen k\"onnen Proteinkomplexe und einzelne Polypeptidketten darstellen.
+\paragraph{Aminos\"auregraphen} werden analog zu Proteingraphen und Komplexgraphen berechnet. Der Unterschied zu den anderen Graphformaten ist, dass keine SSEs betrachtet werden. Stattdessen repr\"asentiert jeder Knoten eine Aminos\"aure eines Proteins. Die Knoten werden entsprechend der chemischen Eigenschaften der Aminos\"auren markiert. Knoten, die saure oder basische Residuen darstellen, werden mit einem c markiert. Ein p markiert Knoten f\"ur polare Residuen, die weder sauer noch basisch sind. F\"ur unpolare Aminos\"auren wird ein h verwendet. Auch Liganden k\"onnen in Aminos\"auregraphen dargestellt werden. Ihre Knoten werden durch ein ? markiert. Aminos\"auregraphen k\"onnen Proteinkomplexe und einzelne Polypeptidketten darstellen.
 
 
-Weiterhin erm\"oglicht PLCC den Vergleich von \textit{Graphlet}-Vektoren, die im folgenden Teil vorgestellt werden. Diese werden mit der von \textit{Pr{\v u}lic et al.} \cite{frqdistribution} vorgestellten Relativen-\textit{Graphlet}-H\"aufigkeiten-Distanz verglichen.
+Weiterhin erm\"oglicht PLCC den Vergleich von \textit{Graphlet}-Vektoren, die im folgenden Teil vorgestellt werden.
 
 
 \section{Der \textit{Graphlet}-Algorithmus}
 
 
-Um die Graphen der PTGL vergleichen zu k\"onnen werden \textit{Graphlets} verwendet. Diese sind im Gegensatz zu Graph-Isomorphismen in polynomieller Zeit berechenbar \cite{sherv_graphlets}. \textit{Graphlets} sind kleine, induzierte, zusammenh\"angende Teilgraphen mit bis zu 5 Knoten. Die Abbildungen \ref{fig:3graphlets}, \ref{fig:4graphlets} und \ref{fig:5graphlets} zeigen die \textit{Graphlets} mit 3, 4 und 5 Knoten. Sie werden durch den Algorithmus gez\"ahlt, so dass anstatt von Graphen nur noch Vektoren mit den \textit{Graphlet}-H\"aufigkeiten verglichen werden. Ein solcher Vergleich von Vektoren ist in konstanter Zeit m\"oglich.
-
-\paragraph{Beschreibung des Algorithmus}
-Um alle \textit{Graphlets} der Gr\"o"se $k \in \{3,4,5\}$ zu z\"ahlen werden alle Euler-Wege der L\"ange $k-1$ in dem gegebenen Graphen gesucht. F\"ur jeden gefundenen Euler-Weg, werden alle inzidenten Kanten aller Knoten des Weges \"uberpr\"uft. Wird hierbei ein \textit{Graphlet} gefunden, wird der Z\"ahler f\"ur das entsprechende Graphlet um den Wert an der entsprechenden Stelle der unten stehenden Gewichtungsvektoren $w_k$ erh\"oht.
+Um diese Graphen vergleichen zu k\"onnen, werden \textit{Graphlets} verwendet. Diese sind im Gegensatz zu Graph-Isomorphismen in polynomieller Zeit berechenbar \cite{sherv_graphlets}. \textit{Graphlets} sind kleine, induzierte Teilgraphen mit bis zu 5 Knoten. Die Abbildungen \ref{fig:3graphlets}, \ref{fig:4graphlets} und \ref{fig:5graphlets} zeigen die \textit{Graphlets} mit 3, 4 und 5 Knoten. Wir betrachten hierbei nur die zusammenh\"angenden \textit{Graphlets}. Sie werden durch den Algorithmus gez\"ahlt und ihre jeweilige Anzahl wird in einen Vektor geschrieben, den wir als \textit{Graphlet}-Vektor bezeichnen.
 
 
-F\"ur \textit{Graphlets} mit $k >= 4$ existieren zus\"atzlich die sogenannten Stern-\textit{Graphlets} ($g_4$ in \ref{fig:4graphlets}, sowie $g_{19}$,$g_{20}$ und $g_{21}$ in \ref{fig:5graphlets}), die keinen solchen Euler-Weg enthalten. Ein Stern-\textit{Graphlet} mit $k$-vielen Knoten hat genau $k$-viele Kanten und keinen Euler-Weg der L\"ange $k-1$.
+\subsection{Beschreibung des Algorithmus}
+Um alle \textit{Graphlets} der Gr\"o"se $k \in \{3,4,5\}$ zu z\"ahlen, werden alle Euler-Wege der L\"ange $k-1$ in dem gegebenen Graphen gesucht. F\"ur jeden gefundenen Euler-Weg werden alle inzidenten Kanten aller Knoten des Weges \"uberpr\"uft. Wird hierbei ein \textit{Graphlet} gefunden, wird der Z\"ahler f\"ur das entsprechende \textit{Graphlet} im \textit{Graphlet}-Vektor um den Wert an der entsprechenden Stelle der unten stehenden Gewichtungsvektoren $w_k$ erh\"oht.
+
+
+F\"ur \textit{Graphlets} mit $k \geq 4$ existieren zus\"atzlich die sogenannten Stern-\textit{Graphlets} ($g_4$ in \ref{fig:4graphlets}, sowie $g_{19}$,$g_{20}$ und $g_{21}$ in \ref{fig:5graphlets}), die keinen solchen Euler-Weg enthalten.
 
 \begin{subequations}
 \label{eq:w-vector}
-\textit{Graphlet}-Gewichtungsvektoren
 \begin{align}
+\text{\textit{Graphlet}-Gewichtungsvektoren} \\
 w_2 := \left( \frac{1}{2} \right) \\
 w_3 := \left( \frac{1}{6}, \frac{1}{2} \right) \\
 w_4 := \left( \frac{1}{24}, \frac{1}{12}, \frac{1}{4}, 1, \frac{1}{8},\frac{1}{2} \right) \\
@@ -147,12 +151,10 @@ w_5 := \left( \frac{1}{120}, \frac{1}{72}, \frac{1}{48}, \frac{1}{36}, \frac{1}{
 \end{align}
 \end{subequations}
 
-Jede Stelle eines Gewichtungsvektors $w_k$ ist mit einem \textit{Graphlet} assoziiert. Die Nenner der Br\"uche in den Vektoren entsprechen den Anzahlen der Euler-Wege der L\"ange $k-1$ in den entsprechenden \textit{Graphlets}. Wenn alle Euler-Wege eines \textit{Graphlets} besucht wurden und der zugeh\"orige induzierte Teilgraph ihm entspricht wird sein Z\"ahler ganzzahlig und das \textit{Graphlet} gilt als gefunden.
-Hierbei bilden  die Stern-\textit{Graphlets}, die keine Euler-Wege der L\"ange $k-1$ enthalten nat\"urlich die Ausnahme.
-
-Somit wird jedes \textit{Graphlet} gez\"ahlt und die entsprechende Anzahl wird in einen Vektor geschrieben. 
-Die so erzeugten Vektoren werden im folgenden als \textit{Graphlet}-Vektoren bezeichnet.
-Da wir 29 verschiedene \textit{Graphlets} betrachten hat ein \textit{Graphlet}-Vektor 29 Stellen. F\"ur den Vergleich von Proteinstrukturen bedeutet dies, das sich der Berechnugsaufwand auf $O(1)$ reduziert, da anstatt von Graphen oder dreidimensionalen K\"orpern Vektoren im Vektorraum $\mathbb{R}^{29}$ verglichen werden.
+Jede Stelle eines Gewichtungsvektors $w_k$ ist mit einem \textit{Graphlet} assoziiert. Die Nenner der Br\"uche in den Vektoren entsprechen den Anzahlen der Euler-Wege der L\"ange $k-1$ in den entsprechenden \textit{Graphlets}. Wenn alle Euler-Wege eines \textit{Graphlets} besucht wurden und der zugeh\"orige induzierte Teilgraph ihm entspricht, wird sein Z\"ahler im \textit{Graphlet}-Vektor ganzzahlig und das \textit{Graphlet} gilt als gefunden.
+Hierbei bilden  die Stern-\textit{Graphlets}, die keine Euler-Wege der L\"ange $k-1$ enthalten, nat\"urlich die Ausnahme.
+ 
+Da wir 29 verschiedene \textit{Graphlets} betrachten, hat ein \textit{Graphlet}-Vektor 29 Stellen. F\"ur den Vergleich von Proteinstrukturen bedeutet dies, dass der Berechnugsaufwand in $O(1)$ liegt, da anstatt von Graphen oder dreidimensionalen K\"orpern Vektoren im Vektorraum $\mathbb{R}^{29}$ verglichen werden.
 
 TODO: Pseudocode in Anhang einf\"ugen
 
@@ -165,25 +167,25 @@ In seiner urspr\"unglichen Version wurde das Programm bereits 2013 von \textit{T
 
 \paragraph{Als Input} erh\"alt das Programm eine oder mehrere GML-Dateien, die Graphen darstellen. Aus jeder GML-Datei wird mit der \textit{Boost-Graph-Library} intern ein Graph erstellt, der f\"ur die Berechnungen verwendet wird.
 
-F\"ur den eingelesenen Graphen berechnet das Programm alle \textit{Graphlets} der Gr\"o"sen 3,4 und 5. Die Implementierung entspricht der Matlab-Implementierung von \textit{N. Shervashidze} \cite{sherv_graphlets}. Zus\"atzlich berechnet es markierte \textit{Graphlets} der Gr\"o"sen 2 und 3, wobei die Markierungen den SSE-Zuordnungen der PTGL entsprechen. Es gibt 35 verschiedene markierte \textit{Graphlets} mit 2 oder 3 Knoten. Unter Ber\"ucksichtigung der Markierungen erh\"oht sich die Anzahl der Stellen der \textit{Graphlet}-Vektoren damit auf 64.
+F\"ur den eingelesenen Graphen berechnet das Programm alle \textit{Graphlets} der Gr\"o"sen 3,4 und 5. Die Implementierung entspricht der \textit{Matlab}-Implementierung von \textit{N. Shervashidze} \cite{sherv_graphlets}. Zus\"atzlich berechnet es markierte \textit{Graphlets} der Gr\"o"sen 2 und 3, wobei die Markierungen den SSE-Zuordnungen der PTGL entsprechen. Es gibt 35 verschiedene markierte \textit{Graphlets} mit 2 oder 3 Knoten. Unter Ber\"ucksichtigung dieser Markierungen erh\"oht sich die Anzahl der Stellen der \textit{Graphlet}-Vektoren auf 64.
 Die Knotengradverteilungen k\"onnen ebenfalls berechnet werden.
 
 \paragraph{Der Output} des Programms umfasst zum einen die Ausgabe der \textit{Graphlet}-Vektoren mit oder ohne markierte \textit{Graphlets} in den Formaten csv, matlab und nova. Zus\"atzlich k\"onnen die \textit{Graphlet}-Vektoren in einer Datenbank, die zuvor mit PLCC erstellt wurde gespeichert werden. Die Knotengradverteilung kann zusammen mit anderen Daten eines Graphen als .csv-Datei ausgegeben werden.
 
 
-\section{\"Ahnlichkeitsma"se}
+\section{\"Ahnlichkeitsma"s}
 
-Durch die Verwendung der \textit{Graphlets} wird der direkte Vergleich von Graphen durch einen Vergleich von \textit{Graphlet}-Vektoren ersetzt. F\"ur den Vergleich dieser Vektoren gibt es prinzipiell zwei verschiedene M\"oglichkeiten. Entweder kann man eine Abstandsmessung durchf\"uhren, oder man z\"ahlt die gemeinsamen Elemente der beiden Vektoren.
+Durch die Verwendung der \textit{Graphlets} wird der direkte Vergleich von Graphen durch einen Vergleich von \textit{Graphlet}-Vektoren ersetzt. Typischerweise wird eine eine Abstandsmessung durchgef\"uhrt, um Vektoren zu vergleichen. Hier verwenden wir eine Metrik von \textit{Pr\v{z}ulj et al.}.
 
 
 
 \subsection{Relative \textit{Graphlet}-H\"aufigkeiten-Distanz}
 
-\textit{N. Pr\v{z}ulj et al.} haben \textit{Graphlets} bereits in verschiedensten Zusammenh\"anen auf biologische Daten wie Protein-Protein-Interaktionsnetzwerke \cite{frqdistribution} angewandt. Als Ma"s f\"ur die \"Ahnlichkeit von Netzwerken nutzen sie die Relative-\textit{Graphlet}-H\"aufigkeiten-Distanz (RGF) $D(G,H)$. Diese Metrik berechnet den Abstand zwischen zwei Graphen $G$ und $H$ als logarithmierte Differenz der normalisierten Anzahl der \textit{Graphlets} in $G$ und $H$. Sie ist folgenderma"sen definiert: \\
+\textit{Pr\v{z}ulj et al.} haben \textit{Graphlets} bereits auf Protein-Protein-Interaktionsnetzwerke (\cite{frqdistribution}) angewandt. Als Ma"s f\"ur die \"Ahnlichkeit von Netzwerken nutzen sie die Relative-\textit{Graphlet}-H\"aufigkeiten-Distanz (RGF) . Diese Metrik berechnet den Abstand $D(G,H)$ zwischen zwei Graphen $G$ und $H$ als logarithmierte Differenz der normalisierten Anzahl der \textit{Graphlets} in $G$ und $H$. Sie ist folgenderma"sen definiert: \\
 
-Sei $N_{i}(G)$ die Anzahl der \textit{Graphlets} von Typ $i \in {1,...,29}$ und \\ $T(G) = \sum_{i = 1}^{29} N_{i}(G)$ die Anzahl der \textit{Graphlets} in $G$, beziehungsweise $H$\\
+Sei $N_{i}(G)$ die Anzahl der \textit{Graphlets} von Typ $i \in {1,...,29}$ und \\ $T(G) = \sum_{i = 1}^{29} N_{i}(G)$ die Anzahl der \textit{Graphlets} in $G$, beziehungsweise $H$.\\
 
-Dann ist die Relative-\textit{Graphlet}-H\"aufigkeiten-Distanz $D(G,H)$ f\"ur zwei Graphen $G$ und $H$ definert als:
+Dann ist $D(G,H)$ f\"ur zwei Graphen $G$ und $H$ definert als:
 
 \begin{subequations}
 \begin{align}
@@ -194,35 +196,12 @@ mit F_{i}(G) := - log(\frac{N_{i}(G)}{T(G)})
 
 
 
-Diese Metrik l\"asst sich analog zur euklidischen Distanz auffassen, denn sie berechnet f\"ur jeden Index $i$ die Differenz zwischen den Stellen $x_i,y_i$ zweier Vektoren $x$ und $y$. Sie verwendet die normalisierten \textit{Graphlet}-Vektoren unter der Annahme, dass die \"Ahnlichkeit zweier Netzwerke sich aus der \"Ahnlichkeit lokaler Substrukturen ableiten l\"asst \cite{frqdistribution}. Somit k\"onnen Netzwerke, die \"ahnliche Substrukturen habe, sich aber in ihrer Gr\"o"se stark unterschieden, immer noch als \"ahnlich erkannt werden. Zus\"atzlich soll durch diese Normalisierung ausgeschlossen werden, dass einzelne besonders h\"aufige \textit{Graphlets} in einem Graphen die Messung verzerren.
+Diese Metrik l\"asst sich analog zur euklidischen Distanz auffassen, denn sie berechnet den Abstand f\"ur zwei Vektoren $x,y$ als Differenz ihrer Eintr\"age $x_i -y_i$. Sie verwendet die normalisierten \textit{Graphlet}-Vektoren unter der Annahme, dass die \"Ahnlichkeit zweier Netzwerke sich aus der \"Ahnlichkeit lokaler Substrukturen ableiten l\"asst \cite{frqdistribution}. Somit k\"onnen Netzwerke, die \"ahnliche Substrukturen habe, sich aber in ihrer Gr\"o"se stark unterschieden, immer noch als \"ahnlich erkannt werden. Zus\"atzlich soll durch diese Normalisierung ausgeschlossen werden, dass einzelne besonders h\"aufige \textit{Graphlets} in einem Graphen die Messung verzerren.
 
-Da alle Eintr\"age der Vektoren aus dem Intervall $ [0,1) \in \mathbb{R} $ stammen werden sie logarithmiert. Damit erh\"alt man Abst\"ande, die aus deutlich gr\"o"seren Intervallen stammen. Die Ergebnisse k\"onnen so leichter interpretiert werden und der Einfluss der von Rundungsfehlern verkleinert sich.
+Da alle Eintr\"age der Vektoren aus dem Intervall $ [0,1] \in \mathbb{R} $ stammen werden sie logarithmiert. Damit erh\"alt man Abst\"ande, die aus deutlich gr\"o"seren Intervallen stammen. Die Ergebnisse k\"onnen so leichter interpretiert werden und der Einfluss der von Rundungsfehlern verkleinert sich.
  
-Weiterhin wurde gezeigt, \cite{frqdistribution} dass diese Metrik auch bei verrauschten Daten noch sehr gut funktioniert. Hierbei ist jedoch zu beachten, dass sie bisher vor allem f\"ur sehr gro"se Netzwerke mit mehreren Tausend Knoten und Kanten verwendet wurde. Diese Gr\"o"se kann von Aminos\"auregraphen erreicht werden, wenn sie gro"se Proteinkomplexe modellieren. Proteingraphen und Komplexgraphen sind aber deutlich kleiner.
+Weiterhin wurde gezeigt, (\cite{frqdistribution}) dass diese Metrik auch bei verrauschten Daten noch sehr gut funktioniert. Hierbei ist jedoch zu beachten, dass sie bisher vor allem f\"ur sehr gro"se Netzwerke mit mehreren Tausend Knoten und Kanten verwendet wurde. Diese Gr\"o"se kann von Aminos\"auregraphen erreicht werden, wenn sie gro"se Proteinkomplexe modellieren. Proteingraphen und Komplexgraphen sind aber deutlich kleiner.
 
-
-\subsection{Modifizierter Jaccard-Index}
-
-Der Jaccard-Index ist im eigentlichen Sinne ein Ma"s, um die \"Ahnlichkeit von gleichm\"achtigen Mengen zu bewerten. F\"ur zwei Mengen $A,B$ berechnet sich der Jaccard-Index $D_{Jac}(A,B)$ folgenderma"sen:
-
-\[ D_{Jac}(A,B) := \frac{\sum_{x \ in A \land x \in B} 1}{\sum_{x \in A \lor x \in B} 1} \]
-
-Dementsprechend sind zwei Mengen $A,B$ gleich, wenn  gilt $D_{Jac} = 1$ und disjunkt, wenn gilt $D_{Jac} = 0$. Mit ihm wird die relative Anzahl der Elemente beider Mengen berechnet.
-Um dieses Ma"s in sinnvoller Weise auf \textit{Graphlet}-Vektoren zu \"ubertragen wurde ein zus\"atzlicher Faktor $k \in \mathbb{R} $ mit $k \in [0,1]$  eingef\"uhrt, der als Pr\"azisionsfaktor zu verstehen ist. Die Defintion des modifizierten Jaccard-Index $D_{Jac-m}(v,w)$ f\"ur zwei Vektoren $v,w$ lautet also:
-
-\[ D_{Jac-m}(v,w) := \frac{\sum_{i = 1}^n x_i}{\sum_{x \in A \lor x \in B} 1} \]
-
-Hierbei gilt:
-
-\[ x_i = 
-   \begin{cases}
-     1     & \quad \mathrm{if} \quad v_i >= w_i \times k \land w_i >= v_i \times k \\
-     0     & \quad \mathrm{else} \\
-   \end{cases}
-\]
-
-In dieser modifizierten Variante werden zwei Vektoren $v,w$ als gleich angesehen, wenn sich $v_i,w_i$ f\"ur alle $i$ h\"ochstens um den Faktor $k$ unterschieden.
-Dies steht im Gegensatz zur RGF, die - analog zu einer Vektornorm - die Abst\"ande zwischen zwei \textit{Graphlet}-Vektoren misst.
 
 
 
@@ -241,7 +220,7 @@ Es sind Proteine der Klassen $\alpha$, $\beta$ und $\alpha/\beta$ vertreten. Pro
 
 Weiterhin wurde darauf geachtet, dass jedes Protein dieses Datensatzes aus genau einer Polypeptidkette mit genau einer Dom\"ane besteht. Dies hat mehrere Gr\"unde.
 
-Zum ersten erm\"oglicht diese Auswahl die beste Vergleichbarkeit der Messungen mit Proteingraphen, Komplexgraphen und Aminos\"auregraphen, da Proteingraphen im Gegensatz zu Komplexgraphen und Amins\"auregraphen nur eine Polypeptidkette darstellen k\"onnen. Durch die Beschr\"ankung auf Proteine mit einer Polypeptidkette wird ein direkter Vergleich durch die Korrelation der paarweisen Distanzen in den unterschiedlichen Formaten m\"oglich.
+Zum ersten erm\"oglicht diese Auswahl die beste Vergleichbarkeit der Messungen mit Proteingraphen, Komplexgraphen und Aminos\"auregraphen, da Proteingraphen im Gegensatz zu Komplexgraphen und Amins\"auregraphen nur eine Polypeptidkette darstellen k\"onnen. Durch die Beschr\"ankung auf Proteine mit genau einer Polypeptidkette wird ein direkter Vergleich durch die Korrelation der paarweisen Distanzen in den unterschiedlichen Formaten m\"oglich.
 
 Ein weiterer Grund f\"ur die Beschr\"ankung auf solche Proteine ist, dass man ein ''klareres Signal'' erh\"alt. Die Struktur von Proteinen wird haupts\"achlich anhand ihrer Dom\"anen beschrieben. Wenn \textit{Graphlets} sich wirklich f\"ur den Vergleich von Topologien eignen, dann m\"ussten gleiche Dom\"anen zu gleichen, oder zumindest \"ahnlichen \textit{Graphlet}-Vektoren f\"uhren.
 Da diese Vektoren globale Struktureigenschaften des Proteins beschreiben erhielte man f\"ur ein Multidom\"anenprotein mit unterschiedlichen Dom\"anen einen Vektor, der die Struktureigenschaften beider Dom\"anen ''vermischt'' und das Signal verrauscht.
@@ -249,7 +228,7 @@ Da diese Vektoren globale Struktureigenschaften des Proteins beschreiben erhielt
 
 In der folgenden Tabelle \ref{tab:set1} sind die PDB-IDs der Proteine dieses Datensatzes zusammen mit ihrer CATH-ID und der Klassifizierung aus der PDB Datei aufgef\"uhrt.
 
-\newpage
+
 
 \begin{table}[h!]
 \label{tab:set1}
@@ -276,14 +255,14 @@ PDB-ID & CATH-ID        & Klassifizierung      \\ \hline
 \end{tabular}
 \end{table}
 
-F\"ur diesen Datensatz wurden alle \textit{Graphlet}-Vektoren berechnet. Die paarweisen Distanzen dieser Vektoren zueinander wurden mit der RGF und dem Jaccard-Index berechnet. F\"ur die berechneten Distanzmatrizen wurden die Korrelationen der Distanzen in den verschiedenen Formaten berechnet und sie wurden mit den von PDBeFold berechneten Distanzen verglichen. 
+F\"ur diesen Datensatz wurden alle \textit{Graphlet}-Vektoren berechnet. Die paarweisen Distanzen dieser Vektoren zueinander wurden mit der RGF und dem modifizierten Jaccard-Index berechnet. F\"ur die berechneten Distanzmatrizen wurden die Korrelationen der Distanzen in den verschiedenen Formaten berechnet und sie wurden mit den von PDBeFold berechneten Distanzen verglichen. 
 
 
 \subsection{Fallstudien - Datensatz 2}
 
-Anfangs wurden 20 verschiedene Proteine aus verschiedenen CATH-Klassen zum Vergleich ausgew\"ahlt. Die Proteine wurden so gew\"ahlt, dass die drei CATH-klassen mit vielen Sekund\"arstrukturelementen \textit{mainly-alpha}, \textit{mainly-beta} und \textit{alpha-beta} vertreten sind. Weiterhin wurde die Auswahl so getroffen, dass es f\"ur jede Stufe der Hierarchie mindestens zwei Proteine gibt, die auf der entsprechenden Stufe in die gleiche Klasse eingeordnet werden. Die Proteine werden im folgenden kurz beschreiben.
+F\"ur die zweite Fallstudie wurden Proteine ausgew\"ahlt, die weniger engen Beschr\"ankungen unterliegen. Die meisten von ihnen besitzen mehrere - h\"aufig unterschiedliche - Dom\"anen und mehrere Polypeptidketten. Sie wurden so ausgew\"ahlt, dass es zu jedem Protein mindestens ein anderes gibt, das die selbe Topologie hat, um festzustellen, ob ein solches Paar auch immer die niedrigsten Distanzen erh\"alt.
 
-
+Weiterhin wurde darauf geachtet, diese Proteine so auszuw\"ahlen, dass die Analyse durch \textit{Graphlets} besonder schwierig ausf\"allt. Es sind Proteine aus der Familie der \textit{TIM-Barrels} enthalten, deren Strukturen sich stark unterscheiden, auch wenn sie als homolog angesehen werden und es wurden Paare von PDB-Strukturen eingef\"ugt, die sich nur durch eine Konformations\"anderung unterscheiden.
 
 
 \subsubsection{Zusammengefasst}
@@ -327,6 +306,30 @@ PDB-ID & CATH-Code  \\
 
 
 \chapter{Ergebnisse}
+
+\section{Der modifizierte Jaccard-Index}
+
+
+Der Jaccard-Index ist im eigentlichen Sinne ein Ma"s, um die \"Ahnlichkeit von gleichm\"achtigen Mengen zu bewerten. F\"ur zwei Mengen $A,B$ berechnet sich der Jaccard-Index $D_{Jac}(A,B)$ folgenderma"sen:
+
+\[ D_{Jac}(A,B) := \frac{\sum_{x \ in A \land x \in B} 1}{\sum_{x \in A \lor x \in B} 1} \]
+
+Dementsprechend sind zwei Mengen $A,B$ gleich, wenn  gilt $D_{Jac} = 1$ und disjunkt, wenn gilt $D_{Jac} = 0$. Mit ihm wird die relative Anzahl der Elemente beider Mengen berechnet.
+Um dieses Ma"s in sinnvoller Weise auf \textit{Graphlet}-Vektoren zu \"ubertragen wurde ein zus\"atzlicher Faktor $k \in \mathbb{R} $ mit $k \in [0,1]$  eingef\"uhrt, der als Pr\"azisionsfaktor zu verstehen ist. Die Defintion des modifizierten Jaccard-Index $D_{Jac-m}(v,w)$ f\"ur zwei Vektoren $v,w$ lautet also:
+
+\[ D_{Jac-m}(v,w) := \frac{\sum_{i = 1}^n x_i}{\sum_{x \in A \lor x \in B} 1} \]
+
+Hierbei gilt:
+
+\[ x_i = 
+   \begin{cases}
+     1     & \quad \mathrm{if} \quad v_i >= w_i \times k \land w_i >= v_i \times k \\
+     0     & \quad \mathrm{else} \\
+   \end{cases}
+\]
+
+In dieser modifizierten Variante werden zwei Vektoren $v,w$ als gleich angesehen, wenn sich $v_i,w_i$ f\"ur alle $i$ h\"ochstens um den Faktor $k$ unterschieden.
+Dies steht im Gegensatz zur RGF, die - analog zu einer Vektornorm - die Abst\"ande zwischen zwei \textit{Graphlet}-Vektoren misst.
 
 
 \section{Der \textit{Graphlet}-Worte-Algorithmus}
@@ -434,11 +437,6 @@ Es k\"onnen also beliebige Alphabete und \textit{Labels} angegeben werden, so la
  
 
 \paragraph{Die Datenbankanbindung} wurde um Funktionen zum Speichern von Aminos\"auregraphen und Komplexgraphen erweitert. Das Speichern von Vektoren markierter \textit{Graphlets} wurde implementiert.
-
-
-\section{Bewertungsfunktionen in PLCC}
-
-
 
 
 
