--- a/literatur.bib
+++ b/literatur.bib
@@ -32,8 +32,9 @@
   URN =		{urn:nbn:de:0030-drops-37226},
   doi =		{http://dx.doi.org/10.4230/OASIcs.GCB.2012.108},
   annote =	{Keywords: protein structure, graph theory, ligand, secondary structure, protein ligang graph}
+}
 
-@inproceedings{sherv_graphlets,
+@Inproceedings{sherv_graphlets,
   title={Efficient graphlet kernels for large graph comparison},
   author={Shervashidze, Nino and Petri, Tobias and Mehlhorn, Kurt and Borgwardt, Karsten M and Vishwanathan, Svn},
   booktitle={International conference on artificial intelligence and statistics},
@@ -51,17 +52,28 @@
   publisher={Oxford Univ Press}
 }
           
-@article{ graphletfrequency,
-                author = "N. Prz{\v u}lj et al",
-                title = "Efficient estimation of graphlet frequency distributions in protein-protein interaction networks",
-                journal = "Bioinformatics",
-                year = "2006" }
+@article{graphletfrequency,
+  title={Efficient estimation of graphlet frequency distributions in protein--protein interaction networks},
+  author={Pr{\v{z}}ulj, Natasa and Corneil, Derek G and Jurisica, Igor},
+  journal={Bioinformatics},
+  volume={22},
+  number={8},
+  pages={974--980},
+  year={2006},
+  publisher={Oxford Univ Press}
+}
+
           
-@article{ frqdistribution,
-                author = "Prz{\v u}lj et al",
-                title = "Modelling interactome: scale-free or geometric",
-                journal = "Bioinformatics",
-                year = "2004" }
+@article{frqdistribution,
+  title={Modeling interactome: scale-free or geometric?},
+  author={Pr{\v{z}}ulj, Natasa and Corneil, Derek G and Jurisica, Igor},
+  journal={Bioinformatics},
+  volume={20},
+  number={18},
+  pages={3508--3515},
+  year={2004},
+  publisher={Oxford Univ Press}
+}
 
 @article{ fatcat,
                 author = "Yuzhen Ye, Adam Godzik",
@@ -84,4 +96,26 @@
   pages={2256--2268},
   year={2004},
   publisher={International Union of Crystallography}
+}
+
+@article{top500,
+  title={Structure validation by C$\alpha$ geometry: $\phi$, $\psi$ and C$\beta$ deviation},
+  author={Lovell, Simon C and Davis, Ian W and Arendall, W Bryan and de Bakker, Paul IW and Word, J Michael and Prisant, Michael G and Richardson, Jane S and Richardson, David C},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={50},
+  number={3},
+  pages={437--450},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{zhangtm,
+  title={TM-align: a protein structure alignment algorithm based on the TM-score},
+  author={Zhang, Yang and Skolnick, Jeffrey},
+  journal={Nucleic acids research},
+  volume={33},
+  number={7},
+  pages={2302--2309},
+  year={2005},
+  publisher={Oxford Univ Press}
 }
